0029412: Huge Memory leak since I upgraded to OC 6.9.0

Added non-regression test bugs vis bug29412